Fix posts overflowing

--- a/src/pages/Post/PostPage.module.css
+++ b/src/pages/Post/PostPage.module.css
@@ -6,10 +6,23 @@
   align-items: center;
 }
 
+.container > p {
+  margin-bottom: 50px;
+}
+
 .noPost {
   margin-top: 200px;
   text-align: center;
 }
 
+.cardContainer {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+}
+
 @media only screen and (max-width: 900px) {
+  .cardContainer {
+    overflow: auto;
+  }
 }
